# sektion_cabinet_model

./: CMakeLists.txt  package.xml
config/: sektion_cabinet_model.rviz
launch/: cabinet_rviz_test.launch  sektion_cabinet_rviz.launch
meshes/: door.stl  drawer.stl  sektion.stl
urdf/: cabinet.urdf  sektion_cabinet.urdf
